# heisenberg-ml

./: .gitignore  CONTEXT.md  pyproject.toml
archive/: build_eligibility.py  build_features.py  build_features_multiwindow.py  build_labels.py  correlation_analysis.py  deploy_formula.sql  deploy_formula_v2.sql  deploy_formula_v8.sql  deploy_formula_v9.sql  evaluate_old.py  feature_audit.py  label_diagnostics.py  optimal_weights.json  optimal_weights_v2.json  optimal_weights_v4.json  optimal_weights_v5.json  optimal_weights_v7.json  optimal_weights_v8.json  optimal_weights_v9.json  run_pipeline.py  score_and_save.py  weight_optimizer.py  weight_optimizer_v2.py  weight_optimizer_v4.py  weight_optimizer_v5.py  weight_optimizer_v7.py  weight_optimizer_v8.py  weight_optimizer_v9.py
data/hscore/: optimal_weights_new.json
scripts/: btc_signal.py  evaluate.py  pipeline.py  regenerate_595.py  score.py  test_copy_target.py  train.py
src/common/: __init__.py  db.py  evaluation.py  features.py  labels.py
src/models/btc_signal/: __init__.py  backtest.py  config.py  signal_card.py  utils.py
src/models/copy_target/: __init__.py  config.py  query_template.sql
src/models/hscore/: __init__.py  config.py  deploy.py  evaluate.py  optimizer.py  pipeline.py  query_template.sql  query_template_v1.sql
src/models/market_matcher/: __init__.py  matcher.py
src/models/sport_hscore/: __init__.py  config.py  deploy.py  evaluate.py  meetingnotes.md  optimizer.py  pipeline.py
src/sport_mcp/: 591.sql  593.sql  594.sql  595.sql  596.sql  597.sql  599.sql  600.sql  601.sql  README.md
(+18 files in other folders)
